--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Services</a>
@@ -48,9 +48,11 @@
               <a class="nav-link" href="#">contact</a>
             </li>
           </ul>
-          <buttom type="button" class="badge rounded-pill bg-light text-dark"
-            >+62 81999977969</buttom
-          >
+          <buttom
+            type="button"
+            class="rounded-pill bg-light text-dark btn-rounded"
+            >+62 81999977969 <span></span
+          ></buttom>
         </div>
       </div>
     </nav>
