crating new folder component and modified files

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>My Portfolio</title>
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/fontawesome.css" />
   </head>
   <body>
     <!--  START SECTION 1 - THE NAVBAR SECTION -->
@@ -48,10 +49,8 @@
               <a class="nav-link" href="#">contact</a>
             </li>
           </ul>
-          <buttom
-            type="button"
-            class="rounded-pill bg-light text-dark btn-rounded"
-            >+62 81999977969 <span></span
+          <buttom type="button" class="rounded-pill bg-light btn-rounded"
+            >+62 81999977969 <span><i class="fa-brands fa-whatsapp"></i></span
           ></buttom>
         </div>
       </div>
