--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     <section id="home" class="intro-section">
       <div class="container">
         <div class="row align-items-center text-white">
+          <!-- start the content for the intro -->
           <div class="col-md-6 intro">
             <h1 class="display-2">
               <span class="display-2--intro">Hey!, I'm Wisnawa</span>
@@ -80,7 +81,19 @@
               >Get in Touch <span><i class="fa-solid fa-arrow-right"></i></span
             ></buttom>
           </div>
-          <div class="col-md-6 intro"></div>
+          <!-- start the content for the video -->
+          <div class="col-md-6 intro text-end">
+            <div class="video-box">
+              <img
+                src="images/arts/intro-section-illustration.png"
+                alt="video illustration"
+                class="img-fluid"
+              />
+              <a href="#">
+                <span></span>
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </section>
