creating new code and files

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <!-- glightbox -->
+    <link
+      rel="stylesheet"
+      href="assets/vendors/glightbox/css/glightbox.min.css"
+    />
   </head>
   <body>
     <!--  START SECTION 1 - THE NAVBAR SECTION -->
@@ -82,21 +87,49 @@
             ></buttom>
           </div>
           <!-- start the content for the video -->
-          <div class="col-md-6 intro text-end">
+          <div class="col-md-6 intros text-end">
             <div class="video-box">
               <img
                 src="images/arts/intro-section-illustration.png"
                 alt="video illustration"
                 class="img-fluid"
               />
-              <a href="#">
-                <span></span>
+              <a
+                href=""
+                class="glightbox position-absolute top-50 start-50 translate-middle"
+              >
+                <span><i class="fa-regular fa-circle-play"></i></span>
+                <span
+                  class="border-animation border-animation--border-1"
+                ></span>
+                <span
+                  class="border-animation border-animation--border-2"
+                ></span>
               </a>
             </div>
           </div>
         </div>
       </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#ffffff"
+          fill-opacity="1"
+          d="M0,192L48,165.3C96,139,192,85,288,96C384,107,480,181,576,192C672,203,768,149,864,138.7C960,128,1056,160,1152,176C1248,192,1344,192,1392,192L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
     </section>
+    <script src="assets/vendors/glightbox/js/glightbox.min.js"></script>
+    <script type="text/javascript">
+      const lightbox = GLightbox({
+        href: "video/code-video.mp4",
+        // href: "https://youtu.be/mOFoh9FUR8w?si=9TVGCds86UJfh8EF",
+        type: "video",
+        source: "local", //vimeo, youtube or local
+        width: 900,
+        autoplayVideos: true,
+        loop: true,
+      });
+    </script>
     <script src="/assets/js/bootstrap.bundle.js"></script>
   </body>
 </html>
