creating new files

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 class="img-fluid"
               />
               <a
-                href=""
+                href="video/code-video.mp4"
                 class="glightbox position-absolute top-50 start-50 translate-middle"
               >
                 <span><i class="fa-regular fa-circle-play"></i></span>
@@ -121,7 +121,7 @@
     <script src="assets/vendors/glightbox/js/glightbox.min.js"></script>
     <script type="text/javascript">
       const lightbox = GLightbox({
-        href: "video/code-video.mp4",
+        // href: "video/code-video.mp4",
         // href: "https://youtu.be/mOFoh9FUR8w?si=9TVGCds86UJfh8EF",
         type: "video",
         source: "local", //vimeo, youtube or local
