--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
         </div>
       </div>
     </nav>
-    <!-- start the intro section -->
+    <!-- the intro section starts -->
     <section id="home" class="intro-section">
       <div class="container">
         <div class="row align-items-center text-white">
-          <!-- start the content for the intro -->
+          <!-- the content for the intro starts  -->
           <div class="col-md-6 intro">
             <h1 class="display-2">
               <span class="display-2--intro">Hey!, I'm Wisnawa</span>
@@ -86,7 +86,8 @@
               >Get in Touch <span><i class="fa-solid fa-arrow-right"></i></span
             ></buttom>
           </div>
-          <!-- start the content for the video -->
+          <!-- the content for the intro ends -->
+          <!-- the content for the video stars -->
           <div class="col-md-6 intros text-end">
             <div class="video-box">
               <img
@@ -108,6 +109,7 @@
               </a>
             </div>
           </div>
+          <!-- the content for the video ends -->
         </div>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -118,6 +120,16 @@
         ></path>
       </svg>
     </section>
+    <!-- the intro section ends -->
+    <!-- the campanies section starts -->
+    <section id="campanies" class="campanies">
+      <div class="container">
+        <div class="row text-center">
+          <h4 class="fw-bold lead mb-3">Trusted by campanies like</h4>
+        </div>
+      </div>
+    </section>
+    <!-- the campanies section ends -->
     <script src="assets/vendors/glightbox/js/glightbox.min.js"></script>
     <script type="text/javascript">
       const lightbox = GLightbox({
