--- a/index.html
+++ b/index.html
@@ -126,8 +126,75 @@
       <div class="container">
         <div class="row text-center">
           <h4 class="fw-bold lead mb-3">Trusted by campanies like</h4>
+          <div class="heading-line mb-5"></div>
         </div>
       </div>
+      <!-- the capanies content starts -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="campanies__logo-box">
+              <img
+                src="images/campanies/campany-1.png"
+                alt="campany 1 logo"
+                title="campany 1 logo"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="campanies__logo-box">
+              <img
+                src="images/campanies/campany-2.png"
+                alt="campany 2 logo"
+                title="campany 2 logo"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="campanies__logo-box">
+              <img
+                src="images/campanies/campany-3.png"
+                alt="campany 3 logo"
+                title="campany 3 logo"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="campanies__logo-box">
+              <img
+                src="images/campanies/campany-4.png"
+                alt="campany 4 logo"
+                title="campany 4 logo"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="campanies__logo-box">
+              <img
+                src="images/campanies/campany-5.png"
+                alt="campany 5 logo"
+                title="campany 5 logo"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="campanies__logo-box">
+              <img
+                src="images/campanies/campany-6.png"
+                alt="campany 6 logo"
+                title="campany 6 logo"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- the capanies content ends -->
     </section>
     <!-- the campanies section ends -->
     <script src="assets/vendors/glightbox/js/glightbox.min.js"></script>
