--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           <div class="col-md-4">
             <div class="campanies__logo-box">
               <img
-                src="images/campanies/campany-6.png"
+                src="images/campanies/campany-6.svg"
                 alt="campany 6 logo"
                 title="campany 6 logo"
                 class="img-fluid"
