--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
       <!-- the capanies content starts -->
       <div class="container">
         <div class="row">
-          <div class="col-md-4">
-            <div class="campanies__logo-box">
+          <div class="col-md-4 col-lg-2">
+            <div class="campanies__logo-box shadow-sm">
               <img
                 src="images/campanies/campany-1.png"
                 alt="campany 1 logo"
@@ -142,8 +142,8 @@
               />
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="campanies__logo-box">
+          <div class="col-md-4 col-lg-2">
+            <div class="campanies__logo-box shadow-sm">
               <img
                 src="images/campanies/campany-2.png"
                 alt="campany 2 logo"
@@ -152,8 +152,8 @@
               />
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="campanies__logo-box">
+          <div class="col-md-4 col-lg-2">
+            <div class="campanies__logo-box shadow-sm">
               <img
                 src="images/campanies/campany-3.png"
                 alt="campany 3 logo"
@@ -162,8 +162,8 @@
               />
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="campanies__logo-box">
+          <div class="col-md-4 col-lg-2">
+            <div class="campanies__logo-box shadow-sm">
               <img
                 src="images/campanies/campany-4.png"
                 alt="campany 4 logo"
@@ -172,8 +172,8 @@
               />
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="campanies__logo-box">
+          <div class="col-md-4 col-lg-2">
+            <div class="campanies__logo-box shadow-sm">
               <img
                 src="images/campanies/campany-5.png"
                 alt="campany 5 logo"
@@ -182,8 +182,8 @@
               />
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="campanies__logo-box">
+          <div class="col-md-4 col-lg-2">
+            <div class="campanies__logo-box shadow-sm">
               <img
                 src="images/campanies/campany-6.svg"
                 alt="campany 6 logo"
@@ -197,6 +197,129 @@
       <!-- the capanies content ends -->
     </section>
     <!-- the campanies section ends -->
+    <!-- the services starts -->
+    <section id="services" class="services">
+      <div class="container">
+        <div class="row text-center">
+          <h1 class="display-3 fw-bold">Our Services</h1>
+          <div class="heading-line mb-1"></div>
+        </div>
+        <!-- start the description content -->
+        <div class="row pt-2 pb-2 mt-0 mb-3">
+          <div class="col-md-6 border-right">
+            <div class="bg-white p-3">
+              <h2 class="fw-bold text-capitalize text-center">
+                Our Services Range From Initial Design To Deployment Anywhere
+                Anytime
+              </h2>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="bg-white p-4 text-start">
+              <p class="fw-light">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
+                nihil incidunt, Lorem ipsum dolor sit amet, consectetur
+                adipisicing. odit voluptates odio dolor ab at blanditiis.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- start the content for the services -->
+      <div class="container">
+        <!-- start the marketing content -->
+        <div class="row">
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
+            <div class="services__content">
+              <div class="icon d-block fas fa-paper-plane"></div>
+              <h3 class="display-3--title mt-1">Marketing</h3>
+              <p class="lh-gl">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Perspiciatis hic cumque earum autem nobis facere voluptatem
+                commodi, laudantium impedit nam?
+              </p>
+              <buttom
+                type="button"
+                class="rounded-pill btn-rounded border-primary"
+                >Learn more <span><i class="fa-solid fa-arrow-right"></i></span
+              ></buttom>
+            </div>
+          </div>
+          <div
+            class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end"
+          >
+            <div class="services__pic">
+              <img
+                src="images/services/service-1.png"
+                alt="marketing illustration"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+        </div>
+        <!-- start the development content -->
+        <div class="row">
+          <div
+            class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-start"
+          >
+            <div class="services__pic">
+              <img
+                src="images/services/service-2.png"
+                alt="web development"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
+            <div class="services__content">
+              <div class="icon d-block fas fa-code"></div>
+              <h3 class="display-3--title mt-1">web development</h3>
+              <p class="lh-gl">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Perspiciatis hic cumque earum autem nobis facere voluptatem
+                commodi, laudantium impedit nam?
+              </p>
+              <buttom
+                type="button"
+                class="rounded-pill btn-rounded border-primary"
+                >Learn more <span><i class="fa-solid fa-arrow-right"></i></span
+              ></buttom>
+            </div>
+          </div>
+        </div>
+        <!-- start the cloud hosting content -->
+        <div class="row">
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
+            <div class="services__content">
+              <div class="icon d-block fas fa-cloud-upload-alt"></div>
+              <h3 class="display-3--title mt-1">cloud hosting</h3>
+              <p class="lh-gl">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Perspiciatis hic cumque earum autem nobis facere voluptatem
+                commodi, laudantium impedit nam?
+              </p>
+              <buttom
+                type="button"
+                class="rounded-pill btn-rounded border-primary"
+                >Learn more <span><i class="fa-solid fa-arrow-right"></i></span
+              ></buttom>
+            </div>
+          </div>
+          <div
+            class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end"
+          >
+            <div class="services__pic">
+              <img
+                src="images/services/service-3.png"
+                alt="cloud hoting"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- the services ends -->
     <script src="assets/vendors/glightbox/js/glightbox.min.js"></script>
     <script type="text/javascript">
       const lightbox = GLightbox({
