creating new section and folder

--- a/index.html
+++ b/index.html
@@ -343,32 +343,168 @@
             data-bs-ride="carousel"
           >
             <div class="carousel-inner">
-              <div class="carousel-item active"></div>
+              <!-- carousel item 1 -->
+              <div class="carousel-item active">
+                <!-- testimonials card -->
+                <div class="testimonials__card">
+                  <p class="lh-lg">
+                    <i class="fa-solid fa-quote-left"></i>Lorem, ipsum dolor sit
+                    amet consectetur adipisicing elit. Illo neque rerum
+                    blanditiis, praesentium consequuntur cumque a natus tempora
+                    nobis totam!
+                    <i class="fa-solid fa-quote-right"></i>
+                    <div class="ratings">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                    </div>
+                  </p>
+                </div>
+                <!-- client picture -->
+                <div class="testimonials__picture">
+                  <img src="/images/testimonials/client-1.jpg" alt="client-1 picture" class="rounded-circle img-fluid">
+                </div>
+                <!-- client name & role -->
+                <div class="testimonials__name">
+                  <h3>client name 1</h3>
+                  <p class="fw-light">CEO & founder</p>
+                </div>
+              </div>
+              <!-- carousel item 2 -->
+              <div class="carousel-item">
+                <!-- testimonials card -->
+                <div class="testimonials__card">
+                  <p class="lh-lg">
+                    <i class="fa-solid fa-quote-left"></i>Lorem, ipsum dolor sit
+                    amet consectetur adipisicing elit. Illo neque rerum
+                    blanditiis, praesentium consequuntur cumque a natus tempora
+                    nobis totam!
+                    <i class="fa-solid fa-quote-right"></i>
+                    <div class="ratings">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                    </div>
+                  </p>
+                </div>
+                <!-- client picture -->
+                <div class="testimonials__picture">
+                  <img src="/images/testimonials/client-2.jpg" alt="client-1 picture" class="rounded-circle img-fluid">
+                </div>
+                <!-- client name & role -->
+                <div class="testimonials__name">
+                  <h3>client name 2</h3>
+                  <p class="fw-light">CEO & founder 2</p>
+                </div>
+              </div>
+              <!-- carousel item 3 -->
+              <div class="carousel-item">
+                <!-- testimonials card -->
+                <div class="testimonials__card">
+                  <p class="lh-lg">
+                    <i class="fa-solid fa-quote-left"></i>Lorem, ipsum dolor sit
+                    amet consectetur adipisicing elit. Illo neque rerum
+                    blanditiis, praesentium consequuntur cumque a natus tempora
+                    nobis totam!
+                    <i class="fa-solid fa-quote-right"></i>
+                    <div class="ratings">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                    </div>
+                  </p>
+                </div>
+                <!-- client picture -->
+                <div class="testimonials__picture">
+                  <img src="/images/testimonials/client-3.jpg" alt="client-1 picture" class="rounded-circle img-fluid">
+                </div>
+                <!-- client name & role -->
+                <div class="testimonials__name">
+                  <h3>client name 3</h3>
+                  <p class="fw-light">CEO & founder 3</p>
+                </div>
+              </div>
+              <!-- carousel item 4 -->
+              <div class="carousel-item">
+                <!-- testimonials card -->
+                <div class="testimonials__card">
+                  <p class="lh-lg">
+                    <i class="fa-solid fa-quote-left"></i>Lorem, ipsum dolor sit
+                    amet consectetur adipisicing elit. Illo neque rerum
+                    blanditiis, praesentium consequuntur cumque a natus tempora
+                    nobis totam!
+                    <i class="fa-solid fa-quote-right"></i>
+                    <div class="ratings">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                    </div>
+                  </p>
+                </div>
+                <!-- client picture -->
+                <div class="testimonials__picture">
+                  <img src="/images/testimonials/client-4.jpg" alt="client-1 picture" class="rounded-circle img-fluid">
+                </div>
+                <!-- client name & role -->
+                <div class="testimonials__name">
+                  <h3>client name 4</h3>
+                  <p class="fw-light">CEO & founder 4</p>
+                </div>
+              </div>
+              <!-- carousel item 5 -->
+              <div class="carousel-item">
+                <!-- testimonials card -->
+                <div class="testimonials__card">
+                  <p class="lh-lg">
+                    <i class="fa-solid fa-quote-left"></i>Lorem, ipsum dolor sit
+                    amet consectetur adipisicing elit. Illo neque rerum
+                    blanditiis, praesentium consequuntur cumque a natus tempora
+                    nobis totam!
+                    <i class="fa-solid fa-quote-right"></i>
+                    <div class="ratings">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                    </div>
+                  </p>
+                </div>
+                <!-- client picture -->
+                <div class="testimonials__picture">
+                  <img src="/images/testimonials/client-5.jpg" alt="client-1 picture" class="rounded-circle img-fluid">
+                </div>
+                <!-- client name & role -->
+                <div class="testimonials__name">
+                  <h3>client name 5</h3>
+                  <p class="fw-light">CEO & founder 5</p>
+                </div>
+              </div>
             </div>
-            <button
-              class="carousel-control-prev"
-              type="button"
-              data-bs-target="#carouselExampleCaptions"
-              data-bs-slide="prev"
-            >
-              <span
-                class="carousel-control-prev-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button
-              class="carousel-control-next"
-              type="button"
-              data-bs-target="#carouselExampleCaptions"
-              data-bs-slide="next"
-            >
-              <span
-                class="carousel-control-next-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+            <div class="text-center">
+              <button
+                class="btn btn-outline-light fas fa-long-arrow-alt-left"
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev"
+              >
+              </button>
+              <button
+                class="btn btn-outline-light fas fa-long-arrow-alt-right"
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next"
+              >
+              </button>
+            </div>
           </div>
         </div>
       </div>
@@ -381,6 +517,87 @@
       </svg>
     </section>
     <!-- the testimonials ends -->
+    <!-- section the FAQ starts -->
+    <section id="faq" class="faq">
+      <div class="container">
+        <div class="row text-center">
+          <h1 class="display-3 fw-bold text-uppercase">faq</h1>
+          <div class="heading-line"></div>
+          <p class="lead">frequently asked questions, get knowledge befere hand</p>
+        </div>
+        <!-- accordion content -->
+        <div class="row mt-5">
+          <div class="col-md-12">
+            <div class="accordion" id="accordionExample">
+              <!-- accordion item 1 -->
+              <div class="accordion-item shadow mb-3">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    What are the main features?
+                  </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  </div>
+                </div>
+              </div>
+              <!-- accordion item 2 -->
+              <div class="accordion-item shadow mb-3">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    do i have to pay again after trial
+                  </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  </div>
+                </div>
+              </div>
+              <!-- accordion item 3 -->
+              <div class="accordion-item shadow mb-3">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    How can I get started after trial?
+                  </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  </div>
+                </div>
+              </div>
+              <!-- accordion item 4 -->
+              <div class="accordion-item shadow mb-3">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                    Can I be refunded if am not satisfied?
+                  </button>
+                </h2>
+                <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- section the FAQ ends -->
+    <!-- the portfolio starts -->
+    <section id="portfolio" class="portfolio">
+      <div class="container">
+        <div class="row">
+          <h1 class="display-3 fw-bold text-capitalize">lates work</h1>
+          <div class="heading-line"></div>
+          <div class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quibusdam, optio obcaecati illo rem excepturi eius totam facere. Alias, voluptatem.</div>
+        </div>
+      </div>
+    </section>
+    <!-- the portfolio ends -->
     <script src="assets/vendors/glightbox/js/glightbox.min.js"></script>
     <script type="text/javascript">
       const lightbox = GLightbox({
