--- a/index.html
+++ b/index.html
@@ -590,10 +590,19 @@
     <!-- the portfolio starts -->
     <section id="portfolio" class="portfolio">
       <div class="container">
-        <div class="row">
+        <div class="row text-center mt-5">
           <h1 class="display-3 fw-bold text-capitalize">lates work</h1>
           <div class="heading-line"></div>
-          <div class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quibusdam, optio obcaecati illo rem excepturi eius totam facere. Alias, voluptatem.</div>
+          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quibusdam, optio obcaecati illo rem excepturi eius totam facere. Alias, voluptatem.</p>
+        </div>
+        <!-- filter buttons -->
+        <div class="row mt-5 mb-4 g-3 text-center">
+          <div class="col-md-12">
+            <button class="btn btn-outline-primary" type="button">all</button>
+            <button class="btn btn-outline-primary" type="button">website</button>
+            <button class="btn btn-outline-primary" type="button">design</button>
+            <button class="btn btn-outline-primary" type="button">mockup</button>
+          </div>
         </div>
       </div>
     </section>
