--- a/index.html
+++ b/index.html
@@ -713,6 +713,110 @@
       </div>
     </section>
     <!-- the portfolio ends -->
+    <!-- get started starts -->
+    <section id="contact" class="get-started">
+      <div class="container">
+        <div class="row text-center">
+          <h1 class="display-3 fw-bold text-capitalize">get started</h1>
+          <div class="heading-line"></div>
+          <p class="lh-lg">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore nihil a beatae mollitia autem fugiat officiis?
+          </p>
+        </div>
+        <!-- start the cta content -->
+        <div class="row text-white">
+          <div class="col-12 col-lg-6 gradient shadow p-3">
+            <div class="cta-info w-100">
+              <h4 class="display-4 fw-bold">100% Satisfaction Guaranteed</h4>
+              <p class="lh-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius doloremque sequi voluptates in omnis odio officia, ut saepe.</p>
+              <h3 class="display-3--brief">What will be the next step?</h3>
+              <ul class="cta-info__list">
+                <li>Lorem ipsum dolor sit.</li>
+                <li>Lorem, ipsum dolor.</li>
+                <li>Lorem ipsum dolor sit amet consectetur.</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-12 col-lg-6 bg-white shadow p-3">
+            <div class="form w-100 pb-2">
+              <h4 class="display-3--title mb-5">start your project</h4>
+              <form action="#" class="row">
+                <div class="col-lg-6 col-md-6 mb-3">
+                  <input type="text" placeholder="First Name" id="inputFirstName" class="shadow form-control form-control-lg">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-3">
+                  <input type="text" placeholder="Last Name" id="inputLastName" class="shadow form-control form-control-lg">
+                </div>
+                <div class="col-lg-12 mb-3">
+                  <input type="email" placeholder="email address" id="inputEmail" class="shadow form-control form-control-lg">
+                </div>
+                <div class="col-lg-12 mb-3">
+                  <textarea name="message" placeholder="message" id="message" rows="8" class="shadow form-control form-control-lg"></textarea>
+                </div>
+                <div class="text-center d-grid mt-1">
+                  <button type="button" class="btn btn-primary rounded-pill pt-3 pb-3">Submit</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- get started ends -->
+    <!-- the footer starts -->
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <!-- CONTENT FOR THE MOBILE NUMBER  -->
+          <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
+            <div class="contact-box__icon">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-phone-call" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#00abfb" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                <path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" />
+                <path d="M15 7a2 2 0 0 1 2 2" />
+                <path d="M15 3a6 6 0 0 1 6 6" />
+              </svg>
+            </div>
+            <div class="contact-box__info">
+              <a href="#" class="contact-box__info--title">+62 81999977969</a>
+              <p class="contact-box__info--subtitle">  Mon-Sun 9am-6pm</p>
+            </div>
+          </div>
+           <!-- CONTENT FOR EMAIL  -->
+          <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
+            <div class="contact-box__icon">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#00abfb" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                <path d="M3 7a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10z" />
+                <path d="M3 7l9 6l9 -6" />
+              </svg>
+            </div>
+            <div class="contact-box__info">
+              <a href="#" class="contact-box__info--title">putu.wisnawa@gmail.com</a>
+              <p class="contact-box__info--subtitle">  Online Support</p>
+            </div>
+          </div>
+          <!-- CONTENT FOR LOCATION  -->
+          <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
+            <div class="contact-box__icon">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-2" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#00abfb" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                <path d="M12 18.5l-3 -1.5l-6 3v-13l6 -3l6 3l6 -3v7.5" />
+                <path d="M9 4v13" />
+                <path d="M15 7v5.5" />
+                <path d="M21.121 20.121a3 3 0 1 0 -4.242 0c.418 .419 1.125 1.045 2.121 1.879c1.051 -.89 1.759 -1.516 2.121 -1.879z" />
+                <path d="M19 18v.01" />
+              </svg>
+            </div>
+            <div class="contact-box__info">
+              <a href="#" class="contact-box__info--title">Bali</a>
+              <p class="contact-box__info--subtitle">  Bali</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- the footer ends -->
     <script src="assets/vendors/glightbox/js/glightbox.min.js"></script>
     <script type="text/javascript">
       const lightbox = GLightbox({
