--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@
             </div>
           </div>
            <!-- CONTENT FOR EMAIL  -->
-          <div class="col-md-5 col-lg-5 contact-box pt-1 d-md-block d-lg-flex d-flex">
+          <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
             <div class="contact-box__icon">
               <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail" viewBox="0 0 24 24" stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -815,8 +815,79 @@
           </div>
         </div>
       </div>
+      <!-- the social media content starts -->
+      <div class="footer-sm" style="background-color: #212121;">
+        <div class="container">
+          <div class="row py-4 text-center text-white">
+            <div class="col-lg-5 col-md-6 md-4 mb-md-0">connect with us on social media</div>
+            <div class="col-lg-7 col-md-6">
+              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+              <a href="#"><i class="fa-brands fa-github"></i></a>
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+              <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- the content for the company info start -->
+      <div class="container mt-5">
+        <div class="row text-white justify-content-center mt-3 pb-3">
+          <div class="col-12 col-ms-6 col-lg-6 mx-auto">
+            <h5 class="text-capitalize fw-bold">campany name</h5>
+            <hr class="bg-white d-inline-bloc mb-4" style="width: 60px; height: 2px;">
+            <p class="lh-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius saepe nesciunt iste nobis delectus eum laudantium ullam.</p>
+          </div>
+          <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
+            <h5 class="text-capitalize fw-bold">campany name</h5>
+            <hr class="bg-white d-inline-bloc mb-4" style="width: 60px; height: 2px;">
+            <ul class="list-inline company-list">
+              <li><a href="#">Lorem ipsum</a></li>
+              <li><a href="#">Lorem ipsum</a></li>
+              <li><a href="#">Lorem ipsum</a></li>
+              <li><a href="#">Lorem ipsum</a></li>
+            </ul>
+          </div>
+          <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
+            <h5 class="text-capitalize fw-bold">Useful Links</h5>
+            <hr class="bg-white d-inline-bloc mb-4" style="width: 60px; height: 2px;">
+            <ul class="list-inline company-list">
+              <li><a href="#">Lorem ipsum</a></li>
+              <li><a href="#">Lorem ipsum</a></li>
+              <li><a href="#">Lorem ipsum</a></li>
+              <li><a href="#">Lorem ipsum</a></li>
+            </ul>
+          </div>
+          <div class="col-12 col-sm-6 col-lg-2 mb-4 mx-auto">
+            <h5 class="text-capitalize fw-bold">Contact</h5>
+            <hr class="bg-white d-inline-bloc mb-4" style="width: 60px; height: 2px;">
+            <ul class="list-inline company-list">
+              <li><a href="#">Lorem ipsum</a></li>
+              <li><a href="#">Lorem ipsum</a></li>
+              <li><a href="#">Lorem ipsum</a></li>
+              <li><a href="#">Lorem ipsum</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- the copyright info start -->
+      <div class="footer-bottom pt-5 pb-5">
+        <div class="container">
+          <div class="row text-center text-white">
+            <div class="col-12">
+              <div class="footer-bottom__copyright">
+                &COPY; copyright 2024 <a href="#">this link</a> | Putu Wisnawa <a href="#">this link</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </footer>
     <!-- the footer ends -->
+    <!-- back to top button starts -->
+    <a href="#" class="shadow rounded-circle back-to-top">
+      <i class="fas fa-chevron-up"></i>
+    </a>
+    <!-- back to top button ends -->
     <script src="assets/vendors/glightbox/js/glightbox.min.js"></script>
     <script type="text/javascript">
       const lightbox = GLightbox({
